--- a/app/src/main/res/values-es/strings_tutos.xml
+++ b/app/src/main/res/values-es/strings_tutos.xml
@@ -10,32 +10,20 @@
 
     <!-- VERSIONS COMPARATOR -->
     <string name="tutorial_comparator_title">Comparador de versiones</string>
-    <string name="tutorial_comparator_premium_content">OctoPrint muliples perfiles, video, comandos personalizados, visor 2D &amp; 3D, simulador en tiempo real, control avanzado, widgets &amp; más…</string>
+    <string name="tutorial_comparator_premium_content">Video, comandos personalizados, visor 2D &amp; 3D, simulador en tiempo real, control avanzado, widgets &amp; más…</string>
     <string name="tutorial_comparator_lite_content">Paquete de funciones básicas gratuitas &amp; sin límite de duración</string>
-    <string name="tutorial_comparator_button_1">Comparador completo</string>
-
-    <!-- KEYBOARD / ADB -->
-    <string name="tutorial_keyboard_title">Control con teclado y ADB</string>
-    <string name="tutorial_keyboard_message">¡Puedes controlar Printoid con un teclado o construir su propia interfaz usando ADB!</string>
-    <string name="tutorial_keyboard_message_3">Más información de los comandos disponibles en el sitio web oficial</string>
-    <string name="tutorial_keyboard_button_1">Control con ADB</string>
-    <string name="tutorial_keyboard_button_2">Control con teclado</string>
-
-    <!-- ADVERTISEMENT -->
-    <string name="tutorial_ads_title">Publicidad en LITE</string>
-    <string name="tutorial_ads_message">La versión LITE es gratuita por una duración ilimitada, pero contiene publicidad.</string>
-    <string name="tutorial_ads_message_2">Para eliminar los anuncios, disfrutar de la aplicación con todas las funciones y ayudar al desarrollador, puede comprar Printoid PRO o Printoid PREMIUM.</string>
+    <string name="tutorial_comparator_button_1">Compara las versiones</string>
 
     <!-- WIDGETS -->
     <string name="tutorial_widgets_title">Widgets exclusivos</string>
     <string name="tutorial_widgets_message">Monitoreo las impresoras 3D sin ni siquiera abrir la aplicación!</string>
-    <string name="tutorial_widgets_message_3">Añadir tantos componentes tal y como se desea crear su propia interfaz y tocarlas para la actualización!</string>
+    <string name="tutorial_widgets_message_2">Widget de cámara: muestra una imagen nueva de tu cámara con un solo clic!</string>
+    <string name="tutorial_widgets_message_3">Widget de estado del servidor: muestra el progreso del trabajo de impresión actual sin tener que iniciar la aplicación!</string>
 
     <!-- STREAMING -->
     <string name="tutorial_video_title">Streaming de Video</string>
     <string name="tutorial_video_message">¡Esté siempre al tanto de lo que ocurre en su impresora 3D!</string>
     <string name="tutorial_video_message_2">Reproductor de vídeo en la aplicación, widget de lanzamiento e icono flotante para ver tu video desde cualquier lugar</string>
-    <string name="tutorial_video_message_4">Un proxy inverso en la Raspberry Pi es una buena práctica para hacer accesible el streaming en el mismo puerto que OctoPrint</string>
     <string name="tutorial_video_button_1">Configuración de la cámara</string>
     <string name="tutorial_video_button_2">Baja/Alta calidad</string>
     <string name="tutorial_video_button_3">Soporte 2 cámaras</string>
@@ -53,29 +41,29 @@
     <!-- MULTI PROFILES -->
     <string name="tutorial_multi_profiles_title">Conexión a OctoPrint simplificada</string>
     <string name="tutorial_multi_profiles_message">¡Control y gestión de varios servidores OctoPrint e impresoras 3D en caso necesario!</string>
-    <string name="tutorial_multi_profiles_message_2">Printoid utilizará de forma inteligente por sí mismo la configuración de red local (LAN) o internet (WAN) cuando sea necesario</string>
-    <string name="tutorial_multi_profiles_message_3">Tenga en cuenta que todas las configuraciones de Printoid son relativas al perfil seleccionado</string>
+    <string name="tutorial_multi_profiles_message_2">Admite configuración de LAN y WAN, autenticación básica, SSL / TLS (HTTPS), certificado TLS, SSH …</string>
     <string name="tutorial_multi_profiles_button_1">Conexión a OctoPrint</string>
     <string name="tutorial_multi_profiles_button_2">Conexión exterior (3G/4G)</string>
     <string name="tutorial_multi_profiles_button_3">Ajusta las configuracións</string>
 
     <!-- 2D / 3D RENDERERS -->
     <string name="tutorial_render_title">Visores 2d y 3D</string>
-    <string name="tutorial_render_message_0">Los visualizadores 2D y 3D son accesibles desde el gestor de archivos ampliado (abrirlo desde el menú de la izquierda)</string>
     <string name="tutorial_render_message">¡Compruebe cada capa de sus archivos GCODE en 2D o visualice todo el objeto STL o GCODE desde la aplicación!</string>
     <string name="tutorial_render_message_2">Printoid provee además un simulador 2D en tiempo real cuando está imprimiendo un objeto</string>
     <string name="tutorial_render_button_1">Funcionamiento</string>
 
     <!-- ANDROID WEAR -->
-    <string name="tutorial_wear_title">Módulo Android Wear</string>
+    <string name="tutorial_wear_title">Módulo WearOS</string>
     <string name="tutorial_wear_message_1">¡Controla y administra tu impresora 3D directamente desde tu muñeca!</string>
     <string name="tutorial_wear_message_2">Información de la impresora, control de ejes, gestión de temperaturas/ventilación/extrusoras, archivos y listas de comandos</string>
-    <string name="tutorial_wear_message_3">Este módulo está disponible solo para Android Wear (no disponible para Samsung Wear (Tizen))</string>
+    <string name="tutorial_wear_message_3">Este módulo está disponible solo para WearOS (no disponible para Samsung Wear (Tizen))</string>
 
-    <!-- WEBAPP -->
-    <string name="tutorial_web_app_title">Interfaz web OctoPrint</string>
-    <string name="tutorial_web_app_message">¡Además tiene un acceso extra a su <b>interfaz web del servidor OctoPrint</b>, sin tener que abandonar Printoid!</string>
-    <string name="tutorial_web_app_message_2">Diseñado para encajar perfectamente con las pantallas de los teléfonos inteligentes y tabletas</string>
+    <!-- BASIC TOOLS -->
+    <string name="tutorial_basic_tools_title">Todas las herramientas que necesita para su (s) impresora (s) 3D.</string>
+    <string name="tutorial_basic_tools_message">Admite hasta 10 cabezales calefactados, cama calefactada, cámara calefactada, ventilación…</string>
+    <string name="tutorial_basic_tools_message_2">Control de avance, caudal, extrusión, retracción, eje, guiado, baby stepping.…</string>
+    <string name="tutorial_basic_tools_message_3">Obiettivi di temperatura, offset della temperatura, pulsante per fermare i motori, preset…</string>
+    <string name="tutorial_basic_tools_message_4">Timelapses, scripts GCODE, alertas y notificaciones…</string>
 
     <!-- WEBSITE -->
     <string name="tutorial_support_title">Sitio web oficial y soporte</string>
@@ -85,6 +73,14 @@
     <string name="tutorial_support_button_1">Artículos recientes</string>
     <string name="tutorial_support_button_2">Preguntas frecuentes</string>
     <string name="tutorial_support_button_3">Contactar desarrollador</string>
+
+    <!-- MORE FEATURES -->
+    <string name="tutorial_more_features_title">Y mucho más con Printoid PREMIUM!</string>
+    <string name="tutorial_more_features_message_1">Soporta plugins OctoPrint: Enclosure, Octolapse, PSU Control, TPLink Smartplugs, WemoSwitch…</string>
+    <string name="tutorial_more_features_message_2">Control con un teclado físico o desde ADB!</string>
+    <string name="tutorial_more_features_message_3">Printoid Hub: el estado de todos sus servidores OctoPrint dentro de la misma pantalla!</string>
+    <string name="tutorial_more_features_message_4">Filament spool manager: integración con RollingUp!</string>
+    <string name="tutorial_more_features_message_5">Protege la aplicación con un código PIN o con tu huella digital!</string>
 
     <!-- END -->
     <string name="tutorial_end_message">Empezar con Printoid</string>
