--- a/app/src/main/res/values-fr/strings_tutos.xml
+++ b/app/src/main/res/values-fr/strings_tutos.xml
@@ -10,32 +10,20 @@
 
     <!-- VERSIONS COMPARATOR -->
     <string name="tutorial_comparator_title">Comparateur des versions</string>
-    <string name="tutorial_comparator_premium_content">Profils OctoPrint multiples, vidéo, commandes personnalisées, visualiseur 2D &amp; 3D, simulateur temps-réel, contrôle avancé, widgets &amp; plus…</string>
+    <string name="tutorial_comparator_premium_content">Streaming vidéo, commandes personnalisées, visualiseur 2D &amp; 3D, simulateur temps-réel, contrôle avancé, widgets &amp; plus…</string>
     <string name="tutorial_comparator_lite_content">Pack de fonctionnalités basiques gratuit &amp; sans limite de durée</string>
-    <string name="tutorial_comparator_button_1">Comparateur complet</string>
-
-    <!-- KEYBOARD / ADB -->
-    <string name="tutorial_keyboard_title">Contrôle par clavier &amp; ADB</string>
-    <string name="tutorial_keyboard_message">Contrôle par clavier physique: la version PREMIUM vous offre la possibilité de contrôler l\'interface de Printoid par un clavier physique pour switcher entre les écrans et pour démarrer/arrêter des fonctionnalités.</string>
-    <string name="tutorial_keyboard_message_3">Plus d\'information sur les commandes disponibles sur le site officiel</string>
-    <string name="tutorial_keyboard_button_1">Contrôle par ADB</string>
-    <string name="tutorial_keyboard_button_2">Contrôle par clavier</string>
-
-    <!-- ADVERTISEMENT -->
-    <string name="tutorial_ads_title">Publicités (LITE)</string>
-    <string name="tutorial_ads_message">La version LITE est gratuite pour une durée illimitée, mais contient des annonces publicitaires.</string>
-    <string name="tutorial_ads_message_2">Pour retirer les publicités, profiter de l\'appli complète et supporter le développeur, vous pouvez acheter Printoid PRO ou PREMIUM.</string>
+    <string name="tutorial_comparator_button_1">Comparer les versions</string>
 
     <!-- WIDGETS -->
     <string name="tutorial_widgets_title">Widgets exclusifs</string>
     <string name="tutorial_widgets_message">Monitorez vos imprimantes 3D sans même lancer l\'application !</string>
-    <string name="tutorial_widgets_message_3">Ajoutez autant de widgets que vous le souhaitez pour créer votre propre interface, puis touchez les pour les mettre à jour !</string>
+    <string name="tutorial_widgets_message_2">Camera Widget: affichez une image fraiche de votre caméra en un clic !</string>
+    <string name="tutorial_widgets_message_3">Server Status Widget: affichez l\'état de l\'impression en cours sans même lancer l\'application !</string>
 
     <!-- STREAMING -->
     <string name="tutorial_video_title">Streaming vidéo</string>
     <string name="tutorial_video_message">Gardez toujours un oeil sur ce qu\'il se passe sur le plateau de votre imprimante 3D !</string>
     <string name="tutorial_video_message_2">Player vidéo interne, widget pour lanceur d\'apps et icône flottante pour voir la vidéo depuis n\'importe quel écran</string>
-    <string name="tutorial_video_message_4">Pour plus d\'information sur l\'installation du reverse-proxy, rendez-vous sur le lien suivant.</string>
     <string name="tutorial_video_button_1">Configuration de la caméra</string>
     <string name="tutorial_video_button_2">Faible/Haute qualité</string>
     <string name="tutorial_video_button_3">Supporter 2 caméras</string>
@@ -53,29 +41,29 @@
     <!-- MULTI PROFILES -->
     <string name="tutorial_multi_profiles_title">Connexion à OctoPrint simplifiée</string>
     <string name="tutorial_multi_profiles_message">Contrôlez et monitorez autant de serveurs OctoPrint et d\'imprimantes 3D que besoin !</string>
-    <string name="tutorial_multi_profiles_message_2">Printoid va utiliser intelligemment la configuration locale (LAN) ou distante (WAN) quand ce sera nécessaire</string>
-    <string name="tutorial_multi_profiles_message_3">Prenez en compte que tous les paramètres de Printoid sont relatifs au profil sélectionné</string>
+    <string name="tutorial_multi_profiles_message_2">Supporte la configuration LAN et WAN, l\'authentification basique HTTP, SSL / TLS (HTTPS), certificat TLS, SSH…</string>
     <string name="tutorial_multi_profiles_button_1">Connexion à OctoPrint</string>
     <string name="tutorial_multi_profiles_button_2">Connexion extérieure (3G/4G)</string>
     <string name="tutorial_multi_profiles_button_3">Adjuster les paramètres</string>
 
     <!-- 2D / 3D RENDERERS -->
     <string name="tutorial_render_title">Visualiseurs 2D &amp; 3D</string>
-    <string name="tutorial_render_message_0">Les visualiseurs 2D et 3D sont accessibles depuis le manager de fichiers étendu (ouvrez-le depuis le menu de gauche)</string>
-    <string name="tutorial_render_message">Vérifiez chaque couche de vos fichiers GCODE en 2D ou affichez le rendu 3D de vos objets STL ou GCODE depuis l\'appli !</string>
+    <string name="tutorial_render_message">Vérifiez les couches de vos fichiers GCODE en 2D ou affichez le rendu 3D de vos objets STL ou GCODE !</string>
     <string name="tutorial_render_message_2">Printoid fourni également un simulateur 2D en temps réel pendant l\'impression</string>
     <string name="tutorial_render_button_1">Fonctionnement</string>
 
     <!-- ANDROID WEAR -->
-    <string name="tutorial_wear_title">Module Android Wear</string>
+    <string name="tutorial_wear_title">Module WearOS</string>
     <string name="tutorial_wear_message_1">Contrôlez et managez votre imprimante directement depuis votre poignet !</string>
     <string name="tutorial_wear_message_2">Informations sur l\'impression, contrôle des axes, management des températures/ventilation/extrudeurs, liste des fichiers et commandes</string>
-    <string name="tutorial_wear_message_3">Ce module est disponible pour Android Wear uniquement (pas disponible pour Samsung Wear (Tizen))</string>
+    <string name="tutorial_wear_message_3">Ce module est disponible pour WearOS uniquement (pas disponible pour Samsung Wear (Tizen))</string>
 
-    <!-- WEBAPP -->
-    <string name="tutorial_web_app_title">Interface web d\'OctoPrint</string>
-    <string name="tutorial_web_app_message">Vous avez également la possibilité d\'accéder directement à <b>l\'interface web de votre serveur OctoPrint</b>, sans avoir à quitter Printoid !</string>
-    <string name="tutorial_web_app_message_2">Conçu pour s\'adapter parfaitement aux écrans des smartphones et tablettes</string>
+    <!-- BASIC TOOLS -->
+    <string name="tutorial_basic_tools_title">Tous les outils nécessaires pour votre imprimante !</string>
+    <string name="tutorial_basic_tools_message">Support de 10 têtes chauffantes, lit chauffant, chambre chauffante, ventilation…</string>
+    <string name="tutorial_basic_tools_message_2">Contrôle du feedrate, du flowrate, de l\'extrusion, de la retractation, des axis, du homing, du baby stepping…</string>
+    <string name="tutorial_basic_tools_message_3">Températures cibles, offsets, bouton pour stopper les moteurs, presets…</string>
+    <string name="tutorial_basic_tools_message_4">Timelapses, scripts GCODE, alertes et notifications…</string>
 
     <!-- WEBSITE -->
     <string name="tutorial_support_title">Site web et support</string>
@@ -85,6 +73,14 @@
     <string name="tutorial_support_button_1">Articles récents</string>
     <string name="tutorial_support_button_2">Questions fréquemment posées</string>
     <string name="tutorial_support_button_3">Contacter le développeur</string>
+
+    <!-- MORE FEATURES -->
+    <string name="tutorial_more_features_title">Et bien plus avec Printoid PREMIUM!</string>
+    <string name="tutorial_more_features_message_1">Supporte les plugins OctoPrint : Enclosure, Octolapse, PSU Control, TPLink Smartplugs, WemoSwitch…</string>
+    <string name="tutorial_more_features_message_2">Contrôle via clavier physique ou via ADB !</string>
+    <string name="tutorial_more_features_message_3">Printoid Hub: l\'état de tous vos serveurs OctoPrint sur un seul et même écran !</string>
+    <string name="tutorial_more_features_message_4">Manager de bobines de filaments : intégration avec RollingUp!</string>
+    <string name="tutorial_more_features_message_5">Protégez l\'accès à l\'application avec un code PIN ou votre empreinte !</string>
 
     <!-- END -->
     <string name="tutorial_end_message">Démarrer Printoid</string>
