--- a/app/src/main/res/values-it/strings_tutos.xml
+++ b/app/src/main/res/values-it/strings_tutos.xml
@@ -10,32 +10,20 @@
 
     <!-- VERSIONS COMPARATOR -->
     <string name="tutorial_comparator_title">Differenze tra le Versioni</string>
-    <string name="tutorial_comparator_premium_content">Più profili OctoPrint, streaming, comandi personalizzati, 2D &amp; Visualizzatori 3D, simulatore in tempo reale, controllo avanzato, widget e altro …</string>
+    <string name="tutorial_comparator_premium_content">Streaming, comandi personalizzati, 2D &amp; Visualizzatori 3D, simulatore in tempo reale, controllo avanzato, widget e altro …</string>
     <string name="tutorial_comparator_lite_content">Pacchetto base di funzionalità gratuitamente &amp; per una durata illimitata</string>
-    <string name="tutorial_comparator_button_1">Full versions comparator</string>
-
-    <!-- KEYBOARD / ADB -->
-    <string name="tutorial_keyboard_title">Tastiera &amp; ADB controlli</string>
-    <string name="tutorial_keyboard_message">Controlla il tabulato con una tastiera o crea la tua interfaccia fisica usando ADB!</string>
-    <string name="tutorial_keyboard_message_3">Maggiori informazioni sui comandi disponibili sul sito web ufficiale</string>
-    <string name="tutorial_keyboard_button_1">ADB controlli</string>
-    <string name="tutorial_keyboard_button_2">Controllo della tastiera</string>
-
-    <!-- ADVERTISEMENT -->
-    <string name="tutorial_ads_title">Pubblicità in LITE</string>
-    <string name="tutorial_ads_message">La versione LITE è gratuita per una durata illimitata, ma contiene pubblicità.</string>
-    <string name="tutorial_ads_message_2">Per rimuovere gli annunci, utilizzare l\'app completa e supportare lo sviluppatore, è possibile acquistare Printoid PRO o Printoid PREMIUM.</string>
+    <string name="tutorial_comparator_button_1">Confronta le versioni</string>
 
     <!-- WIDGETS -->
     <string name="tutorial_widgets_title">Esclusivi widgets</string>
     <string name="tutorial_widgets_message">Monitora le tue stampanti 3D senza dover avviare l\'applicazione!</string>
-    <string name="tutorial_widgets_message_3">Aggiungi tutti i widget che vuoi per costruire la tua interfaccia e toccali per aggiornare i valori!</string>
+    <string name="tutorial_widgets_message_2">Camera Widget: mostra una nuova immagine dalla tua fotocamera con un clic!</string>
+    <string name="tutorial_widgets_message_3">Server Status Widget: mostra l\'avanzamento del processo di stampa corrente senza dover avviare l\'app!</string>
 
     <!-- STREAMING -->
     <string name="tutorial_video_title">Video streaming</string>
     <string name="tutorial_video_message">Tieni sempre d\'occhio cosa succede sul piatto della tua stampante 3D!</string>
     <string name="tutorial_video_message_2">Lettore video in-app, widget di avvio e icona mobile per vedere il tuo video da qualsiasi luogo</string>
-    <string name="tutorial_video_message_4">Un proxy inverso sul Raspberry Pi è una buona pratica per rendere lo streaming accessibile sulla stessa porta di OctoPrint</string>
     <string name="tutorial_video_button_1">Imposta la mia camera</string>
     <string name="tutorial_video_button_2">Inizia bassa/alta qualità</string>
     <string name="tutorial_video_button_3">Supporto 2 camere</string>
@@ -53,29 +41,29 @@
     <!-- MULTI PROFILES -->
     <string name="tutorial_multi_profiles_title">Facile connessione ai server OctoPrint</string>
     <string name="tutorial_multi_profiles_message">Controlla e gestisci tutti i server OctoPrint e le stampanti 3D di cui hai bisogno!</string>
-    <string name="tutorial_multi_profiles_message_2">Printoid utilizzerà in modo intelligente la configurazione locale (LAN) o in remoto (WAN) quando necessario</string>
-    <string name="tutorial_multi_profiles_message_3">Si noti che tutte le impostazioni di stampa sono relative al profilo selezionato</string>
+    <string name="tutorial_multi_profiles_message_2">Supporto per configurazione LAN e WAN, autenticazione di base, SSL / TLS (HTTPS), certificato TLS, SSH …</string>
     <string name="tutorial_multi_profiles_button_1">Come connettere?</string>
     <string name="tutorial_multi_profiles_button_2">Cconnettersi dall\'esterno (3G / 4G)</string>
     <string name="tutorial_multi_profiles_button_3">Regolazione delle impostazioni</string>
 
     <!-- 2D / 3D RENDERERS -->
     <string name="tutorial_render_title">Visualizzatori 2D &amp; 3D </string>
-    <string name="tutorial_render_message_0">I visualizzatori 2D e 3D sono accessibili dal gestore file esteso (aprilo dal menu a sinistra)</string>
     <string name="tutorial_render_message">Controlla ogni strato dei tuoi file GCODE in 2D o visualizza l\'intero oggetto STL o GCODE in 3D dall\'app!</string>
     <string name="tutorial_render_message_2">Il Printoid fornisce anche un simulatore 2D in tempo reale quando si stampa un oggetto</string>
     <string name="tutorial_render_button_1">Come funziona? </string>
 
     <!-- ANDROID WEAR -->
-    <string name="tutorial_wear_title">Modulo Android Wear</string>
+    <string name="tutorial_wear_title">Modulo WearOS</string>
     <string name="tutorial_wear_message_1">Controlla e gestisci la tua stampante 3D direttamente dal tuo polso!</string>
     <string name="tutorial_wear_message_2">Informazioni sulla stampante, controllo assi, gestione temperature /ventilazione/estrusori, file e liste comandi</string>
-    <string name="tutorial_wear_message_3">Questo modulo è disponibile solo per Android Wear (non disponibile per Samsung Wear (Tizen))</string>
+    <string name="tutorial_wear_message_3">Questo modulo è disponibile solo per WearOS (non disponibile per Samsung Wear (Tizen))</string>
 
-    <!-- WEBAPP -->
-    <string name="tutorial_web_app_title">Interfaccia web di OctoPrint</string>
-    <string name="tutorial_web_app_message">Hai anche un accesso extra alla tua <b>Interfaccia web del server OctoPrint</b>, senza dover uscire da Printoid!</string>
-    <string name="tutorial_web_app_message_2">Progettato per adattarsi perfettamente agli schermi di smartphone e tablet</string>
+    <!-- BASIC TOOLS -->
+    <string name="tutorial_basic_tools_title">Tutti gli strumenti necessari per le tue stampanti 3D</string>
+    <string name="tutorial_basic_tools_message">Supporta fino a 10 teste riscaldate, letto riscaldato, camera riscaldata, ventilazione…</string>
+    <string name="tutorial_basic_tools_message_2">Controllo dell\'avanzamento, portata, estrusione, retrazione, asse, homing, baby stepping…</string>
+    <string name="tutorial_basic_tools_message_3">Obiettivi di temperatura, offset della temperatura, pulsante per fermare i motori, preset…</string>
+    <string name="tutorial_basic_tools_message_4">Timelaps, script GCODE, avvisi e notifiche…</string>
 
     <!-- WEBSITE -->
     <string name="tutorial_support_title">Sito Web ufficiale e supporto</string>
@@ -85,6 +73,14 @@
     <string name="tutorial_support_button_1">Feed di notizie</string>
     <string name="tutorial_support_button_2">Domande frequenti</string>
     <string name="tutorial_support_button_3">Contatta lo sviluppatore</string>
+
+    <!-- MORE FEATURES -->
+    <string name="tutorial_more_features_title">E molto di più con il Printoid PREMIUM!</string>
+    <string name="tutorial_more_features_message_1">Supporta i plugin OctoPrint: Enclosure, Octolapse, PSU Control, TPLink Smartplugs, WemoSwitch…</string>
+    <string name="tutorial_more_features_message_2">Controllo con una tastiera fisica o da ADB!</string>
+    <string name="tutorial_more_features_message_3">Printoid Hub: lo stato di tutti i server OctoPrint all\'interno della stessa schermata!</string>
+    <string name="tutorial_more_features_message_4">Filament spool manager: integrazione con RollingUp!</string>
+    <string name="tutorial_more_features_message_5">Proteggi l\'app con un codice PIN o con l\'impronta digitale!</string>
 
     <!-- END -->
     <string name="tutorial_end_message">Avvia Printoid</string>
