--- a/app/src/main/res/values/strings_tutos.xml
+++ b/app/src/main/res/values/strings_tutos.xml
@@ -12,33 +12,21 @@
     <!-- VERSIONS COMPARATOR -->
     <string name="tutorial_comparator_title">Versions comparator</string>
     <string name="tutorial_comparator_premium_title" translatable="false">Printoid PREMIUM</string>
-    <string name="tutorial_comparator_premium_content">Multiple OctoPrint profiles, streaming, custom commands, 2D &amp; 3D visualizers, real-time simulator, advanced control, widgets and more…</string>
+    <string name="tutorial_comparator_premium_content">Video streaming, custom commands, 2D &amp; 3D visualizers, real-time simulator, advanced control, widgets and more…</string>
     <string name="tutorial_comparator_lite_title" translatable="false">Printoid LITE</string>
     <string name="tutorial_comparator_lite_content">Basic pack of features for free &amp; for an unlimited duration</string>
-    <string name="tutorial_comparator_button_1">Full versions comparator</string>
-
-    <!-- KEYBOARD / ADB -->
-    <string name="tutorial_keyboard_title">Keyboard &amp; ADB control</string>
-    <string name="tutorial_keyboard_message">Control Printoid with a keyboard or build your own physical interface by using ADB!</string>
-    <string name="tutorial_keyboard_message_3">More informations about the available commands on the official web-site</string>
-    <string name="tutorial_keyboard_button_1">ADB control</string>
-    <string name="tutorial_keyboard_button_2">Keyboard control</string>
-
-    <!-- ADVERTISEMENT -->
-    <string name="tutorial_ads_title">Advertising in LITE</string>
-    <string name="tutorial_ads_message">The LITE version is free for an unlimited duration, but contains advertising.</string>
-    <string name="tutorial_ads_message_2">To remove the ads, enjoy the full-featured app, and support the developer, you can purchase Printoid PRO or Printoid PREMIUM.</string>
+    <string name="tutorial_comparator_button_1">Compare the versions</string>
 
     <!-- WIDGETS -->
     <string name="tutorial_widgets_title">Exclusive widgets</string>
-    <string name="tutorial_widgets_message">Monitor your 3D printers without having to start the application!</string>
-    <string name="tutorial_widgets_message_3">Add as many widget as you want to build your own interface and just tap on them to update the values!</string>
+    <string name="tutorial_widgets_message">Monitor your 3D printer(s) without having to start the application!</string>
+    <string name="tutorial_widgets_message_2">Camera Widget: show a fresh image from your camera with one click!</string>
+    <string name="tutorial_widgets_message_3">Server Status Widget: show the current printing job progress without having to start the app!</string>
 
     <!-- STREAMING -->
     <string name="tutorial_video_title">Video streaming</string>
     <string name="tutorial_video_message">Always keep an eye on what\'s happening on your 3D printer plate!</string>
     <string name="tutorial_video_message_2">In-app video player, launcher widget and floating icon to see your video from anywhere</string>
-    <string name="tutorial_video_message_4">A reverse proxy on the Raspberry Pi is a good practice to make the streaming accessible on the same port as OctoPrint</string>
     <string name="tutorial_video_button_1">Setup my camera</string>
     <string name="tutorial_video_button_2">Start low/high quality</string>
     <string name="tutorial_video_button_3">Support 2 cameras</string>
@@ -56,29 +44,29 @@
     <!-- MULTI PROFILES -->
     <string name="tutorial_multi_profiles_title">Easy connection to OctoPrint servers</string>
     <string name="tutorial_multi_profiles_message">Control and manage as many OctoPrint servers and 3D printers as you need!</string>
-    <string name="tutorial_multi_profiles_message_2">Printoid will smartly use by itself the local (LAN) or distant (WAN) configuration when needed</string>
-    <string name="tutorial_multi_profiles_message_3">Please note that every Printoid settings are relative to the selected profile</string>
+    <string name="tutorial_multi_profiles_message_2">Support LAN and WAN configurations, basic authentication, SSL/TLS (HTTPS), TLS certificate, SSH…</string>
     <string name="tutorial_multi_profiles_button_1">How to connect?</string>
     <string name="tutorial_multi_profiles_button_2">Connect from outside (3G/4G)</string>
     <string name="tutorial_multi_profiles_button_3">Adjusting the settings</string>
 
     <!-- 2D / 3D RENDERERS -->
     <string name="tutorial_render_title">2D &amp; 3D visualizers</string>
-    <string name="tutorial_render_message_0">The 2D and 3D visualizers are accessible from the extended file manager (open it from the left menu)</string>
-    <string name="tutorial_render_message">Check each layers of your GCODE files in 2D or visualize the whole STL or GCODE object in 3D from the app!</string>
+    <string name="tutorial_render_message">Show layers of your GCODE files in 2D or visualize your STL or GCODE object in 3D!</string>
     <string name="tutorial_render_message_2">Printoid also provides a real-time 2D simulator when you are printing an object</string>
     <string name="tutorial_render_button_1">How does it work</string>
 
     <!-- ANDROID WEAR -->
-    <string name="tutorial_wear_title">Android Wear module</string>
+    <string name="tutorial_wear_title">WearOS module</string>
     <string name="tutorial_wear_message_1">Control and manage your 3D printer directly from your wrist!</string>
     <string name="tutorial_wear_message_2">Printer informations, axis control, temperatures/ventilation/extruders management, files and commands lists</string>
-    <string name="tutorial_wear_message_3">This module is only available for Android Wear (not available for Samsung Wear (Tizen))</string>
+    <string name="tutorial_wear_message_3">This module is only available for WearOS (NOT available for Samsung Wear (Tizen))</string>
 
-    <!-- WEBAPP -->
-    <string name="tutorial_web_app_title">OctoPrint web interface</string>
-    <string name="tutorial_web_app_message">You also have an extra access to your <b>OctoPrint server web interface</b>, without having to leave Printoid!</string>
-    <string name="tutorial_web_app_message_2">Designed to fit perfectly with smartphone and tablet screens</string>
+    <!-- BASIC TOOLS -->
+    <string name="tutorial_basic_tools_title">All the tools you need for your 3D printer(s)</string>
+    <string name="tutorial_basic_tools_message">Supports up to 10 heated heads, heated bed, heated chamber, ventilation…</string>
+    <string name="tutorial_basic_tools_message_2">Control of feedrate, flowrate, extrusion, retraction, axis, homing, baby stepping…</string>
+    <string name="tutorial_basic_tools_message_3">Temperature targets, temperature offsets, button to stop motors, presets…</string>
+    <string name="tutorial_basic_tools_message_4">Timelapses, GCODE scripts, alerts and notifications…</string>
 
     <!-- WEBSITE -->
     <string name="tutorial_support_title">Official website and support</string>
@@ -88,6 +76,14 @@
     <string name="tutorial_support_button_1">News feed</string>
     <string name="tutorial_support_button_2">Frequently Asked Questions</string>
     <string name="tutorial_support_button_3">Contact the developer</string>
+
+    <!-- MORE FEATURES -->
+    <string name="tutorial_more_features_title">And much more in Printoid PREMIUM!</string>
+    <string name="tutorial_more_features_message_1">Supports OctoPrint plugins: Enclosure, Octolapse, PSU Control, TPLink Smartplugs, WemoSwitch…</string>
+    <string name="tutorial_more_features_message_2">Control with a physical keyboard or from ADB!</string>
+    <string name="tutorial_more_features_message_3">Printoid Hub: the status of all your OctoPrint servers within the same screen!</string>
+    <string name="tutorial_more_features_message_4">Filament spool manager: integration with RollingUp!</string>
+    <string name="tutorial_more_features_message_5">Protect the app with a PIN code or with your fingerprint!</string>
 
     <!-- END -->
     <string name="tutorial_end_message">Start Printoid</string>
