--- a/app/src/main/res/values/strings_hub.xml
+++ b/app/src/main/res/values/strings_hub.xml
@@ -10,6 +10,9 @@
     <string name="hub_introduction_short">Printoid Hub is a PREMIUM feature, which allows you to show the status of all your 3D printers at the same time, within the same screen!</string>
     <string name="hub_start_description">The status of all your 3D printers on the same screen!</string>
 
+    <string name="hub_introduction_image_url" translatable="false">https://printoidnet.files.wordpress.com/2019/03/d2hv6wnxcaa2cjr.jpg_large_framed-1.png</string>
+    <string name="hub_introduction_more_info_url" translatable="false">https://printoid.net/2019/04/13/introducing-printoid-hub-all-your-octoprint-servers-on-the-same-screen/</string>
+
     <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
         Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
         Not all information are currently displayed in this screen (such as the camera), but don\'t worry, it will come in the next versions of the app!</string>
