--- a/app/src/main/res/values-pt/strings_hub.xml
+++ b/app/src/main/res/values-pt/strings_hub.xml
@@ -23,4 +23,7 @@
     <string name="hub_setting_hide_second_icon">Esconder o ícone do Printoid Hub</string>
     <string name="hub_setting_hide_second_icon_tip">Oculte o segundo ícone do aplicativo para iniciar o Printoid Hub a partir do inicializador de aplicativos</string>
 
+    <string name="hub_show_camera"><u>Show camera…</u></string>
+    <string name="hub_show_other_camera"><u>Show the other camera…</u></string>
+
 </resources>
