--- a/app/src/main/res/values-ru/strings_hub.xml
+++ b/app/src/main/res/values-ru/strings_hub.xml
@@ -23,4 +23,7 @@
     <string name="hub_setting_hide_second_icon">Скрыть значок Printoid Hub</string>
     <string name="hub_setting_hide_second_icon_tip">Скройте второй значок приложения, чтобы запустить Printoid Hub из панели запуска приложений.</string>
 
+    <string name="hub_show_camera"><u>Show camera…</u></string>
+    <string name="hub_show_other_camera"><u>Show the other camera…</u></string>
+
 </resources>
